--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: default
 
 <div class="container row">
     <h1 class="cv-title"><span class="black white-text">{{ site.title }}</span></h1>
-    {% assign steps = site.steps | sort: 'date' %}
-    {% for step in steps %}
+    {% assign steps = site.steps | sort: 'block' %}
+    {% for step in steps reversed %}
     <div class="item">
         <i class="vertical-line"></i>
-        <h2 class="item-date">{{ step.date | date: '%m/%Y' }}{% if step.enddate %} - {{ step.enddate | date: '%m/%Y' }}{% endif %}</h2>
+       <h2 class="item-date">{{ step.block | block }}{% if step.date %} - {{ step.date | date: '%Y/%m' }}{% endif %}</h2>
         <div class="card-panel">
             <h3 class="card-title">
                 {{ step.title }}
@@ -21,6 +21,5 @@ layout: default
     {% endfor %}
     <div class="last-item">
         <i class="vertical-line"></i>
-        
     </div>
     </div>
